@@ -1,5 +1,8 @@
 2008-05-02  Luca Bruno  <lethalman88@gmail.com>
 
+	* syx/syx-memory.c (syx_memory_save_image): unmark the object being skipped
+	(_syx_memory_write_object_with_vars): ensure the stack
+
 	* syx/syx-scheduler.c (syx_scheduler_remove_process): always check for active process
 
 	* syx/syx-lexer.c (_syx_char_is_binary_second): temporarly removed '-'
